--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node index"
+    "dev": "tsc && node dist/index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "prettier": "^3.1.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint": "^8.54.0"
+    "prettier": "^3.1.0"
   },
   "dependencies": {
+    "discord-interactions": "^3.4.0",
     "express": "^4.18.2"
   }
 }
