--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,6 +15,6 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["app/**/*", "*.ts"],
+  "include": ["src/**/*", "*.ts"],
   "exclude": ["node_modules"]
 }
