--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,9 @@
     "prettier": "^3.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.2",
     "discord-interactions": "^3.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
