refactor infra and add docker-compose init sql file

--- a/note-service/package.json
+++ b/note-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && node dist/index"
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
