--- a/note-service/package.json
+++ b/note-service/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.1.0"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.465.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3"
