--- a/server/dockerfile
+++ b/server/dockerfile
@@ -13,7 +13,7 @@ COPY package.json .
 COPY ./dist .
 
 # Installing dependencies
-RUN npm install
+RUN npm install --production
 
 # Starting our application
 CMD [ "node", "index.js" ]
